methods.picture.PictureMono3.scala.error
Erreur de compilation :
PictureMono3:12: error: not found: value avances
  gauche;for (i <- 1 to 21){avances};
                            ^PictureMono3:13: error: not found: value droites
   droites};
   ^