methods.picture.PictureMono3.scala.code
override def run() {for (i<-1 to 3) {faireGrandMotif};
}
def faireGrandMotif() {
  for (i<-1 to 3) {
    grandmotif;}
    for (i<-1 to 21) {
      avance
    };
  for (i<-1 to 63){
    recule;
  };
  gauche;for (i <- 1 to 21){avances};
   droites};

def grandmotif() {
  for (i<-1 to 3) {faireMotif};
  
}

def faireMotif() {
  for (i<-1 to 3) {
    motif;
    avance;avance;avance;avance;avance;avance;avance}
  for (i<-1 to 21){
    recule;
    
  }
  gauche;avance;avance;avance;avance;avance;avance;avance;droite;
}
def motif() {
  for (i<-1 to 4) {
    faireV ;
  }
}
def dessine() {
    baisseBrosse; leveBrosse;
  }
  def faireV() {
    setCouleurBrosse(Color.lightGray)
    avance;avance;
    dessine;
    gauche;avance;droite;avance
    dessine;
    avance;droite;avance;
    dessine;//fais le v 
    gauche;avance;avance;gauche;// se positionne pour le prochain
  }